<resources>
    <string name="app_name">Carpet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">more</string>
    <string name="hatolik_yurz_berdi">Hatolik yurz berdi!</string>
    <string name="home">Home</string>
    <string name="go">Go</string>
    <string name="messages">Messages</string>
    <string name="sync">Sync</string>
    <string name="trash">Trash</string>
    <string name="customer">Customer</string>
    <string name="settings">Settings</string>
    <string name="log_in">Log In</string>
    <string name="product_name">Product Name</string>
    <string name="pon">Pon</string>
    <string name="design">Design</string>
    <string name="color">Color</string>
    <string name="amount">Amount</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="price">Price</string>
    <string name="countable">Countable</string>
    <string name="uncountable">Uncountable</string>
    <string name="ok">Ok</string>
    <string name="product_image">product image</string>
    <string name="others">Others</string>
</resources>