<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_home"
        android:title="@string/messages" />

    <item
        android:id="@+id/nav_sync"
        android:icon="@drawable/ic_home"
        android:title="@string/sync" />

    <item
        android:id="@+id/nav_trash"
        android:icon="@drawable/ic_home"
        android:title="@string/trash" />

    <item
        android:id="@+id/nav_customer"
        android:icon="@drawable/ic_home"
        android:title="@string/customer" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_home"
        android:title="@string/settings" />

</menu>